--- a/ALU1/ALU1_summary.html
+++ b/ALU1/ALU1_summary.html
@@ -2,7 +2,7 @@
 <BODY TEXT='#000000' BGCOLOR='#FFFFFF' LINK='#0000EE' VLINK='#551A8B' ALINK='#FF0000'>
 <TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'>
-<TD ALIGN=CENTER COLSPAN='4'><B>ALU1 Project Status (07/04/2022 - 22:06:27)</B></TD></TR>
+<TD ALIGN=CENTER COLSPAN='4'><B>ALU1 Project Status</B></TD></TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Project File:</B></TD>
 <TD>ALU1.xise</TD>
@@ -105,9 +105,9 @@ System Settings</A>
 &nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='3'><B>Secondary Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=SecondaryReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD COLSPAN='2'><B>Generated</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/vhdl_github_2/vhdl_github_2/ALU1\isim.log'>ISIM Simulator Log</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>Mon 4. Jul 21:34:52 2022</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/vhdl_github_2/vhdl_github_2/ALU1\isim.log'>ISIM Simulator Log</A></TD><TD>Current</TD><TD COLSPAN='2'>Mon 4. Jul 22:10:07 2022</TD></TR>
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 07/04/2022 - 22:06:27</center>
+<br><center><b>Date Generated:</b> 08/08/2022 - 16:18:23</center>
 </BODY></HTML>
